created popular locations functionality

--- a/AccountUser/templates/user/userprofile_list.html
+++ b/AccountUser/templates/user/userprofile_list.html
@@ -12,7 +12,7 @@
   <form class="container-fluid justify-content-start">
    <a href="{% url 'account:update_user_profile' slug=userprofile.slug %}"> <button class="btn btn-outline-success me-2" type="button">Edit Profile</button></a>
    <a href="{% url 'account:delete_user' slug=userprofile.slug %}"> <button class="btn btn-outline-success  me-2" type="button">Delete Profile</button></a>
-   <a href="{% url 'account:update_user_profile' slug=userprofile.slug %}"> <button class="btn btn-outline-success  me-2" type="button">Add Hotels</button></a>
+   <a href="{% url 'realestateapp:create_property' %}"> <button class="btn btn-outline-success  me-2" type="button">Add Hotels</button></a>
   </form>
 </nav>
 <hr>
