--- a/AdminUser/templates/admin/adminHome.html
+++ b/AdminUser/templates/admin/adminHome.html
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="mynavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin_user:manage_users' %}">Admin Panel</a>
+            <a class="nav-link" href="{% url 'admin_user:admin_home' %}">Admin Panel</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'realestateapp:home' %}">Goto main site</a>
