admin dashbord modified BookingApp28

--- a/AdminUser/templates/admin/adminDashboard.html
+++ b/AdminUser/templates/admin/adminDashboard.html
@@ -1,67 +1,67 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
-<h3>Admin Dashboard</h3>
+<h3 style="color: #f57b0a; margin-left: 40px;">Admin Dashboard</h3>
 <div class="container">
   <div class="row">
     <div class="col-4">
       <div
         class="card bg-danger text-white"
         style="width: 350px; height: 200px"
-      >
-        <p>Total Users</p>
-        <p>{{count_users}}</p>
+      ><br><br>
+        <p style="margin-left: 120px;">Total Users</p>
+        <p style="margin-left: 120px;">{{count_users}}</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="card bg-warning" style="width: 350px; height: 200px">
-        <p>Last 24 hours Users</p>
-        <p>{{last_day_count_users}}</p>
+      <div class="card bg-warning text-white" style="width: 350px; height: 200px;"><br><br>
+        <p style="margin-left: 120px;">Last 24 hours Users</p>
+        <p style="margin-left: 120px;">{{last_day_count_users}}</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="card bg-primary" style="width: 350px; height: 200px">
-        <p>Last 30 days Users</p>
-        <p>{{last_month_count_users}}</p>
-      </div>
-    </div>
-  </div>
-  <div class="row mt-4">
-    <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Total Listings</p>
-        <p>{{count_property}}</p>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Last 24 hours Listings</p>
-        <p>{{last_day_count_property}}</p>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Last 30 days Listings</p>
-        <p>{{last_month_count_property}}</p>
+      <div class="card bg-primary text-white" style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Last 30 days Users</p>
+        <p style="margin-left: 120px;">{{last_month_count_users}}</p>
       </div>
     </div>
   </div>
   <div class="row mt-4">
     <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Total Reservations</p>
-        <p>{{count_booking}}</p>
+      <div class="card bg-info text-white" style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Total Listings</p>
+        <p style="margin-left: 120px;">{{count_property}}</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Last 24 hours Reservations</p>
-        <p>{{last_day_count_booking}}</p>
+      <div class="alert alert-info" style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Last 24 hours Listings</p>
+        <p style="margin-left: 120px;">{{last_day_count_property}}</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="card" style="width: 350px; height: 200px">
-        <p>Last 30 days Reservations</p>
-        <p>{{last_month_count_booking}}</p>
+      <div class="bg-danger text-white" style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Last 30 days Listings</p>
+        <p style="margin-left: 120px;">{{last_month_count_property}}</p>
+      </div>
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-4">
+      <div class="bg-primary text-white" style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Total Reservations</p>
+        <p style="margin-left: 120px;">{{count_booking}}</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="alert alert-dark " style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Last 24 hours Reservations</p>
+        <p style="margin-left: 120px;">{{last_day_count_booking}}</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="alert alert-success " style="width: 350px; height: 200px"><br><br>
+        <p style="margin-left: 120px;">Last 30 days Reservations</p>
+        <p style="margin-left: 120px;">{{last_month_count_booking}}</p>
       </div>
     </div>
   </div>
