--- a/AdminUser/templates/admin/adminManageUser.html
+++ b/AdminUser/templates/admin/adminManageUser.html
@@ -1,6 +1,6 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
-<h3>Manage Admin Users</h3>
+<h3 style="color: #1dc418;">Manage Admin Users</h3>
 <a class="btn btn-primary" href="{% url 'admin_user:admin_register_user' %}">Add New Admin User</a>
 <table class="table">
   <thead>
@@ -20,7 +20,7 @@
       <td>{{user.email}}</td>
       <td>
         {% comment %} <a class="text-decoration-none" href="{% url 'admin_user:edit_role_admin_user' pk=user.id %}">Edit</a> {% endcomment %}
-        <a class="text-decoration-none" href="{% url 'admin_user:delete_admin_user' pk=user.id %}">Delete</a>
+        <a class="text-decoration-none" href="{% url 'admin_user:delete_admin_user' pk=user.id %}"><button style="color: white; background-color: red; width: 80px;">Delete</button></a>
       </td>
     </tr>
     {% endfor %}
