--- a/AdminUser/templates/admin/roles/manage_admin_user_roles.html
+++ b/AdminUser/templates/admin/roles/manage_admin_user_roles.html
@@ -1,9 +1,9 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
-<h3>Manage Admin Users Roles</h3>
-<table class="table">
+<h3 style="color: #a249d6;">Manage Admin Users Roles</h3>
+<table class="table" style=" color: black;">
   <thead>
-    <tr>
+    <tr style="color: #bf0d28;">
       <th scope="col">S.No</th>
       <th scope="col">Username</th>
       <th scope="col">Roles</th>
@@ -18,8 +18,8 @@
       <td>{{user.user.username}}</td>
       <td>{{user.roles}}</td>
       <td>
-         <a class="text-decoration-none" href="{% url 'admin_user:edit_role_admin_user' slug=user.slug %}">Edit</a> 
-        <a class="text-decoration-none" href="{% url 'admin_user:delete_role_admin_user' slug=user.slug %}">Delete Roles</a>
+         <a class="text-decoration-none" href="{% url 'admin_user:edit_role_admin_user' slug=user.slug %}"><button style="color: #fff; background-color: green; width:130px;">Edit</button></a> 
+        <a class="text-decoration-none" href="{% url 'admin_user:delete_role_admin_user' slug=user.slug %}"><button style="color:white; background-color:red;">Delete Roles</button></a>
       </td>
     </tr>
     {% endfor %}
