--- a/AdminUser/templates/admin/users/list_users.html
+++ b/AdminUser/templates/admin/users/list_users.html
@@ -1,9 +1,9 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
-<h3>Manage normal Users</h3>
-<table class="table">
+<h3 style="color: #1dc418;">Manage normal Users</h3>
+<table class="table" style="color: black;">
   <thead>
-    <tr>
+    <tr style="color: #bf0d28;">
       <th scope="col">S.No</th>
       <th scope="col">Username</th>
       <th scope="col">Email</th>
@@ -18,8 +18,8 @@
       <td>{{user.username}}</td>
       <td>{{user.email}}</td>
       <td>
-         <a class="text-decoration-none" href="{% url 'admin_user:convert_admin_from_normal_user' pk=user.id %}">Add admin</a> 
-        <a class="text-decoration-none" href="{% url 'admin_user:delete_users_by_admin' pk=user.id %}">Delete</a>
+         <a class="text-decoration-none" href="{% url 'admin_user:convert_admin_from_normal_user' pk=user.id %}"><button style="color:white; background-color: green;" >Add admin</button></a> 
+        <a class="text-decoration-none" href="{% url 'admin_user:delete_users_by_admin' pk=user.id %}"><button style="color:white; background-color: red;">Delete</button></a>
       </td>
     </tr>
     {% endfor %}
