Popular location wise functionality is implemented

--- a/RealEstateApp/templates/home.html
+++ b/RealEstateApp/templates/home.html
@@ -24,5 +24,15 @@
           </div>
         </div>
 </section>
+ <section class="bg-light py-4 my-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="mb-3 text-danger">Popular Location Wise Hotels</h2>
+                 {% include 'property/popular_location_wise_property.html' %}
+            </div>
+          </div>
+        </div>
+</section>
    {% include 'home/footer.html' %} 
 {% endblock %}
