Implemented design for create and update property page

--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -42,7 +42,7 @@
 </div>
  <div class="d-flex justify-content-center ">
   <button type="submit" class="btn btn-primary mt-2 mb-2 me-4">Submit</button>
-  <a class="btn btn-danger mt-2 mb-2" href="/">Cancel</a>
+  <a class="btn btn-danger mt-2 mb-2" href="/">CANCEL</a>
   </div>
   </form>
   
