--- a/RealEstateApp/templates/property/create_property.html
+++ b/RealEstateApp/templates/property/create_property.html
@@ -14,8 +14,8 @@
     />
 <style>
   .drop-zone {
-  max-width: 200px;
-  height: 200px;
+  max-width: 460px;
+  height: 310px;
   padding: 25px;
   display: flex;
   align-items: center;
@@ -66,23 +66,54 @@
 
 <h1 class="text-center">Add The Property</h1>
 <hr />
-<div class="container col-sm-6">
+<div class="container col-sm-8 bg-success mb-4">
+
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
+   <div class="row container">
   {% for field in form.visible_fields %}
+  {% if forloop <= 7 %}
+   <div class="col-sm-6">
   <div class="form-group mt-1">
+    {% comment %} <label for="{{ field.id_for_label }}">{{ field.label }}</label> {% endcomment %}
+     {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
+     {% comment %} {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} {% endcomment %}
     {% render_field field class="form-control" placeholder=field.label %}
     {% for error in field.errors %}
       <span class="help-block">{{ error }}</span>
     {% endfor %}
   </div>
-{% endfor %}
-
- <div class="drop-zone mt-2">
+  </div>
+  {% else %}
+  
+  <div class="col-sm-6 bg-success">
+  <div class="form-group mt-1">
+    <label for="{{ field.id_for_label }}">{{ field.label }}</label> 
+     {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
+     {% comment %} {{ field|append_attr:"class:form-control"|append_attr:"placeholder:field.label" }} {% endcomment %}
+      {% if field.label == "Cancellation" %}
+      {% render_field field class="form-control" placeholder=field.label %}
+         <div class="drop-zone mt-2">
                 <span class="drop-zone__prompt">Drop file here or click to upload</span>
                 <input type="file" name="myFile" class="drop-zone__input">
             </div>
-  <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
+      {% else %}
+        {% render_field field class="form-control" placeholder=field.label %}
+      {% endif %}
+        
+    {% for error in field.errors %}
+      <span class="help-block">{{ error }}</span>
+    {% endfor %}
+  </div>  
+  </div>
+  {% endif %}
+ 
+{% endfor %}
+</div>
+<div class="d-flex justify-content-center ">
+  <button type="submit" class="btn btn-primary mt-2 mb-2 me-4">Submit</button>
+  <a class="btn btn-danger mt-2 mb-2" href="/">CANCEL</a>
+  </div>
 </form>
 </div>
 {% include 'home/footer.html' %} 
