--- a/RealEstateApp/templates/property/list_property_user.html
+++ b/RealEstateApp/templates/property/list_property_user.html
@@ -3,6 +3,10 @@
 <hr />
 <div class="container justify-content-center mt-4 mb-4">
   <div class="row">
+  {% if not properties %}
+    <p class="text-center"> No property found.</p>
+ 
+  {% endif %}
     {% for property in properties %}
     <div class="card me-2 mt-4" style="width: 12rem">
     <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
@@ -20,9 +24,6 @@
       
       </div>
       </a>
-      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' %}" >
-        Book
-        </a>
     </div>
     {% endfor %}
   </div>
