--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -11,7 +11,7 @@
  <div class="row">
  <div class="col-sm-7">
    <a id="btnShowPopup">
-    <img class="" style="height:550px;width:103%;" src="{% if property.image %}{{ property.image.url }}{% endif %}">
+    <img style="height:550px;width:103%;" src="{% if property.image %}{{ property.image.url }}{% endif %}"/>
    </a>
    </div>
    <div class="col-sm-5">
@@ -55,13 +55,14 @@
       <div class="col">
       {% if ranking.rank__avg %}
       Ranking : 
-      {% endif %}
+      
       <input class="d-none" type="text" value='{{ranking.rank__avg}}' id="star_ranking">
       <span class="fa fa-star" id="star1"></span>
       <span class="fa fa-star" id="star2"></span>
       <span class="fa fa-star" id="star3"></span>
       <span class="fa fa-star" id="star4"></span>
       <span class="fa fa-star" id="star5"></span>
+      {% endif %}
       </div>
     </div>
             <h5>Abbout this Listing</h5>
@@ -196,8 +197,7 @@
 
 <hr>
 {% include 'home/footer.html' %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/
-jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script >
 var star = document.getElementById('star_ranking').value;
 var star = parseInt(star);
@@ -250,17 +250,11 @@ function showDiv() {
    document.getElementById('welcomeDiv').style.display = "block";
 }
 $(function () {
-        $("#btnShowPopup").click(function () {           
+        $("#btnShowPopup").click(function () {   
+           console.log("00000000000000000000000000000000")        
             $("#MyPopup").modal("show");
         });
     }); 
-$(document).ready(function () {
-    $('img').on('click', function () {
-        var image = $(this).attr('src');
-        $('#myModal').on('show.bs.modal', function () {
-            $(".img-responsive").attr("src", image);
-        });
-    });
-});
+
 </script>
 {% endblock %}
