Added all feilds of address in booking page and removed extra fields

--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -1,5 +1,5 @@
 {% include 'base.html' %}{% load widget_tweaks %} {% block content %}
-<h1 class="text-center">Add The Booking</h1>
+<h1 class="text-center">Booking of property</h1>
 <hr/>
 <div class="container col-sm-8 bg-success mb-4">
 <form method="post">
