--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -20,7 +20,7 @@
       
       </div>
       </a>
-      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' %}" >
+      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' slug=property.slug %}" >
         Book
         </a>
     </div>
