--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,8 +1,25 @@
 {% include 'base.html' %} {% block content %}
-<h3 class="text-center mt-4">List The Property</h3>
+<div class="container row">
+<div class="col-sm-4">
+<h4 class="text-left mt-4 ml-4">List The Property</h4>
+</div>
+<div class="col-sm-8 d-flex justify-content-end">
+ <form action="{% url 'realestateapp:search_with_property_name' %}">
+<div class="input-group">
+  <input type="search" class="form-control rounded mt-2" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
+  <button class="btn btn-outline-primary mt-2">search</button>
+</div>
+ </form>
+</div>
+</div>
+
 <hr />
 <div class="container justify-content-center mt-4 mb-4">
   <div class="row">
+    {% if not properties %}
+    <p class="text-center"> No property found.</p>
+ 
+  {% endif %}
     {% for property in properties %}
     <div class="card me-2 mt-4">
      
