--- a/RealEstateApp/templates/property/list_property_user.html
+++ b/RealEstateApp/templates/property/list_property_user.html
@@ -1,31 +1,61 @@
 {% include 'base.html' %} {% block content %}
-<h3 class="text-center mt-4">List The Property for {{request.user.username}}</h3>
+<h3 class="text-center mt-4">List The Property</h3>
 <hr />
 <div class="container justify-content-center mt-4 mb-4">
   <div class="row">
-  {% if not properties %}
+    {% if not properties %}
     <p class="text-center"> No property found.</p>
  
   {% endif %}
     {% for property in properties %}
-    <div class="card me-2 mt-4" style="width: 12rem">
-    <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
-    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
-      <div class="card-body">
+    <div class="card me-2 mt-4">
+     
+    <div class="card-body row">
+    <div class="col-sm-4">
+     <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
+    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:400px;"/>
+    </a>
+    </div>
+    <div class="col-sm-6">
+      <p class="card-title h6">{{property.property_name}}</p>
         <p class="card-text text-danger" style="font-size: 0.6rem">
+          <b> {{property.Address.city}}</b> 
           {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
-          Bed {% else %} Beds {% endif %}
+          Bed {% else %} Beds {% endif %}   
         </p>
-        <p class="card-title h6">{{property.property_name}}</p>
+        
         <p class="card-text" style="font-size: 0.6rem">
-          R${{property.cost}} Per Night
+           R${{property.cost}} Per Night
         </p>
-       
-      
+         <p class="card-text" style="font-size: 0.6rem">
+         {{property.Description}}
+         </p>
+        <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
+          Show Details
+        </a>
+        </div>
+   
       </div>
-      </a>
+        
     </div>
     {% endfor %}
+    {% if is_paginated %}
+        <div class="pagination justify-content-end ">
+            <span class="page-links d-flex float-right">
+               
+                {% if page_obj.has_previous %}
+                    <a class="text-decoration-none me-2" href="/listpropertyuser?page={{ page_obj.previous_page_number }}"><span class="h5" aria-hidden="true">&laquo;</span> </a>
+                {% endif %}
+                <span class="page-current">
+                   <p class="small"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</p>
+                </span>
+                {% if page_obj.has_next %}
+                    <a class="ml-2 text-decoration-none" href="/listpropertyuser?page={{ page_obj.next_page_number }}"> <span class="h5" aria-hidden="true">&raquo;</span></a>
+                {% endif %}
+              
+            </span>
+        </div>
+    {% endif %}
   </div>
 </div>
 {% include 'home/footer.html' %}
