--- a/RealEstateApp/templates/property/most_viewed_all_properties.html
+++ b/RealEstateApp/templates/property/most_viewed_all_properties.html
@@ -19,7 +19,7 @@
         </p>
       </div>
       </a>
-      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' slug=property.slug %}" >
+      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' slug=property.property.slug %}" >
         Book
         </a>
     </div>
