Added design in Draft Property approving page

--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -6,8 +6,8 @@
 <div class="col-sm-8 d-flex justify-content-end">
  <form action="{% url 'realestateapp:search_with_property_name' %}">
 <div class="input-group">
-  <input type="search" class="form-control rounded mt-2" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
-  <button class="btn btn-outline-primary mt-2">search</button>
+  <input type="search" class="form-control rounded mt-2 me-1" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
+  <button class="btn btn-success mt-2"><i class="fas fa-search"></i></button>
 </div>
  </form>
 </div>
