--- a/AccountUser/templates/registration/signout.html
+++ b/AccountUser/templates/registration/signout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,18 +9,37 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+      <link rel="stylesheet" href="{% static 'css/user/logout.css' %}"/>
+      <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
+      <!-- bootstrap -->
+      <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <title>Signin</title>
   </head>
   <body>
-    <div class="container justify-content-center align-items-center sm-6">
-      <h1>Logged out</h1>
-      <p>
-        You have been successfully logged out. You can
-        <a href="{% url 'account:signin' %}">log-in again</a>.
+    <div class="container justify-content-center align-items-center sm-6" id="form-box">
+      
+      <h1 class="log_out">Logged out</h1>
+      <p class="msg"><br>
+        You have been successfully logged out. You can log-in again<br><br>
+        <a  href="{% url 'account:signin' %}"><button class="btn-16">Login</button></a>.
       </p>
     </div>
   </body>
+  {% include 'home/footer.html' %} 
 </html>
+
+
+
