--- a/RealEstateApp/templates/property/list_property_user.html
+++ b/RealEstateApp/templates/property/list_property_user.html
@@ -1,5 +1,10 @@
-{% include 'base.html' %} {% block content %}
-<h3 class="text-center mt-4">List The Property</h3>
+{% include 'base.html' %} 
+{% load static %}
+{% block style %}
+<link rel="stylesheet" href="{% static 'css/property/list_property_user.css' %}"/>
+{% endblock %}
+{% block content %}
+<h3 class="text-center mt-4">List Of The Property</h3>
 <hr />
 <div class="container justify-content-center mt-4 mb-4">
   <div class="row">
@@ -12,26 +17,27 @@
      
     <div class="card-body row">
     <div class="col-sm-4">
-     <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
-    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:400px;"/>
+     <a class="card-text float-right text-decoration-none" style="" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
+    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style=""/>
     </a>
     </div>
     <div class="col-sm-6">
-      <p class="card-title h6">{{property.property_name}}</p>
-        <p class="card-text text-danger" style="font-size: 0.6rem">
-          <b> {{property.Address.city}}</b> 
-          {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
+      <p class="card-title h6" id="p_name">{{property.property_name}}</p>
+        <p class="card-text text-danger" id="st">
+          <b class="room_details">Location: {{property.Address.city}}</b><br>
+          Room Type:
+          {{property.room_type}} <br> Beds: {{property.beds}} {% if property.beds == 1 %}
           Bed {% else %} Beds {% endif %}   
         </p>
         
-        <p class="card-text" style="font-size: 0.6rem">
-           R${{property.cost}} Per Night
+        <p class="card-text">
+           R$:{{property.cost}} Per Night
         </p>
-         <p class="card-text" style="font-size: 0.6rem">
-         {{property.Description}}
+         <p class="card-text">
+         Description:  {{property.Description}}
          </p>
-        <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
-          Show Details
+        <a class="card-text float-right text-decoration-none" id="show_details" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
+          <button class="showDetails_btn">Show Details</button>
         </a>
         </div>
    
@@ -44,7 +50,7 @@
             <span class="page-links d-flex float-right">
                
                 {% if page_obj.has_previous %}
-                    <a class="text-decoration-none me-2" href="/listpropertyuser?page={{ page_obj.previous_page_number }}"><span class="h5" aria-hidden="true">&laquo;</span> </a>
+                    <a class="text-decoration-none me-2" id="pre_page" href="/listpropertyuser?page={{ page_obj.previous_page_number }}"><span class="h5" aria-hidden="true">&laquo;</span> </a>
                 {% endif %}
                 <span class="page-current">
                    <p class="small"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</p>
