--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'css/property_details.css' %}"/>
 <link rel="stylesheet" href="{% static 'css/star_ranking.css' %}"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{% static 'css/starrating/star_ranting.css' %}"/>
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
