--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -27,6 +27,10 @@
           class="text-decoration-none"
           href="{% url 'admin_user:normal_users' %}"
           ><button style="color: green; width: 250px; ">Normal users</button></a></li>
+          <li class="list-group-item"><a
+          class="text-decoration-none"
+          href="{% url 'admin_user:add_popular_location' %}"
+          ><button style="color: green; width: 250px; ">Add Popular Location</button></a></li>
     </ul>
   </div>
   <div class="col-sm-9" style="background-color: #ffe6e6">
