--- a/RealEstateApp/templates/property/popular_location_wise_property.html
+++ b/RealEstateApp/templates/property/popular_location_wise_property.html
@@ -5,7 +5,7 @@
  {% if forloop.counter == 1  %}
 <div class="row">
 <div class="col-sm-6">
- <a href="">
+ <a href="{% url 'realestateapp:city_search_property' city=property.Address_city %}">
   <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
      <div class="top-left text-white ml-2" style="position: absolute; bottom: 8px;left: 16px;">{{property.Address_city}}<br>{{property.count}} properties</div>
   </a>
@@ -14,7 +14,7 @@
  {% endif %}
  {% if forloop.counter == 2 %}
  <div class="col-sm-6">
- <a href="">
+ <a href="{% url 'realestateapp:city_search_property' city=property.Address_city %}">
  <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
   <div class="top-left text-white ml-2" style="position: absolute; bottom: 8px;left: 16px;">{{property.Address_city}}<br>{{property.count}} properties</div> 
  </a>
@@ -24,7 +24,7 @@
  {% if forloop.counter == 3 %}
  <div class="row">
  <div class="col-sm-4">
- <a href="">
+ <a href="{% url 'realestateapp:city_search_property' city=property.Address_city %}">
   <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
   <div class="top-left text-white ml-2" style="position: absolute; bottom: 8px;left: 16px;"> {{property.Address_city}}<br>{{property.count}} properties</div>
  </a>
@@ -32,7 +32,7 @@
 {% endif %}
 {% if forloop.counter == 4 %}
  <div class="col-sm-4">
- <a href="">
+ <a href="{% url 'realestateapp:city_search_property' city=property.Address_city %}">
  <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
      <div class="top-left text-white ml-2" style="position: absolute; bottom: 8px;left: 16px;">{{property.Address_city}}<br>{{property.count}} properties</div>
  </a>
@@ -40,7 +40,7 @@
 {% endif %}
 {% if forloop.counter == 5 %}
   <div class="col-sm-4">
-  <a href="">
+  <a href="{% url 'realestateapp:city_search_property' city=property.Address_city %}">
  <img src="{% if property.property.image %}{{ property.property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:100%;">
   <div class="top-left text-white ml-2" style="position: absolute; bottom: 8px;left: 16px;">{{property.Address_city}}<br>{{property.count}} properties</div>   
  </a>
