--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,56 +1,64 @@
-{% include 'base.html' %} {% block content %}
-<div class="container row">
+{% include 'base.html' %}
+{% load static %}
+{% block style %}
+<link rel="stylesheet" href="{% static 'css/property/list_property.css' %}"/>
+{% endblock %}
+ {% block content %}
+<div class="container">
+  <div class="row">
 <div class="col-sm-4">
-<h4 class="text-left mt-4 ml-4">List The Property</h4>
+<h4 class="ml-4">List Of The Property</h4>
 </div>
-<div class="col-sm-8 d-flex justify-content-end">
+<div class="col-sm-8 d-flex justify-content-end" >
  <form action="{% url 'realestateapp:search_with_property_name' %}">
 <div class="input-group">
   <input type="search" class="form-control rounded mt-2 me-1" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
   <button class="btn btn-success mt-2"><i class="fas fa-search"></i></button>
 </div>
  </form>
+ </div>
 </div>
 </div>
 
 <hr />
-<div class="container justify-content-center mt-4 mb-4">
+<div class="container justify-content-center mt-4 mb-4" >
   <div class="row">
     {% if not properties %}
     <p class="text-center"> No property found.</p>
  
   {% endif %}
     {% for property in properties %}
-    <div class="card me-2 mt-4">
+    <div class="card me-2 mt-4"id="total">
      
     <div class="card-body row">
     <div class="col-sm-4">
      <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
-    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" style="height:200px;width:400px;"/>
+    <img src="{% if property.image %}{{ property.image.url }}{% endif %}" class="card-img-top mt-2" id="img" />
     </a>
     </div>
     <div class="col-sm-6">
       <p class="card-title h6">{{property.property_name}}</p>
-        <p class="card-text text-danger" style="font-size: 0.6rem">
+        <p class=" h7">
           <b> {{property.Address.city}}</b> 
-          {{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
+          :{{property.room_type}} - {{property.beds}} {% if property.beds == 1 %}
           Bed {% else %} Beds {% endif %}   
         </p>
         
-        <p class="card-text" style="font-size: 0.6rem">
+        <p class="card-text h8" >
            R${{property.cost}} Per Night
         </p>
-         <p class="card-text" style="font-size: 0.6rem">
-         {{property.Description}}
+         <p class="card-text h9">
+         Description:{{property.Description}}
          </p>
-        <a class="card-text float-left text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
-          Show Details
+        <a class="card-text float-left text-decoration-none" href="{% url 'realestateapp:detail_property' slug=property.slug %}" >
+          <button class="button">Show Details</button>
         </a>
         </div>
         <div class="col-sm-2">
-          <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'booking:create_booking' slug=property.slug %}" >
-        Book
+          <a class="card-text float-right text-decoration-none book_btn" href="{% url 'booking:create_booking' slug=property.slug %}" >
+        Check avilability
         </a>
+
       </div>
       </div>
         
@@ -61,13 +69,13 @@
             <span class="page-links d-flex float-right">
                
                 {% if page_obj.has_previous %}
-                    <a class="text-decoration-none me-2" href="/listproperty?page={{ page_obj.previous_page_number }}"><span class="h5" aria-hidden="true">&laquo;</span> </a>
+                    <a class="text-decoration-none me-2" href="/listproperty?page={{ page_obj.previous_page_number }}"><span class="h2" aria-hidden="true">&laquo;</span> </a>
                 {% endif %}
                 <span class="page-current">
                    <p class="small"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</p>
                 </span>
                 {% if page_obj.has_next %}
-                    <a class="ml-2 text-decoration-none" href="/listproperty?page={{ page_obj.next_page_number }}"> <span class="h5" aria-hidden="true">&raquo;</span></a>
+                    <a class="ml-2 text-decoration-none" href="/listproperty?page={{ page_obj.next_page_number }}"> <span class="h2" aria-hidden="true">&raquo;</span></a>
                 {% endif %}
               
             </span>
